# pictDB

./: .gitignore  CMakeLists.txt  README.md  gc.sh  interpretor.sh  style.bash  style.sh  tests.bash
done/: CMakeLists.txt
done/pictDBM/: Makefile  README.md  db  db_create.c  db_create.c.orig  db_delete.c  db_gbcollect.c  db_insert.c  db_list.c  db_read.c  db_utils.c.orig  dedup.c  dedup.h  image_content.c  image_content.c.orig  image_content.h  index.html  pictDB.h  pictDBM.c  pictDB_server.c  semantic.css  server.sh  testDB02.pictdb_dynamic  testDB02.pictdb_static  testDB03.pictdb_static  week07.sh
done/week04/: Makefile  db_list.c  db_utils.c  error.c  error.h  pictDB.h  pictDBM.c  testDB01.pictdb_static
pictDBM/: db_create.c  db_delete.c  db_utils.c  error.c  error.h  pictDBM_tools.c  pictDBM_tools.h  pictDB_server.c  server.sh
pictDBM/libmongoose/: Makefile
